z-index fixed

--- a/assets/style/main.less
+++ b/assets/style/main.less
@@ -61,7 +61,7 @@ nav{
     width: 100%;
     height: 140px;
     position: fixed;
-    
+    z-index: 999;
     display: flex;
     justify-content: center;
     align-items: center;
